--- a/5. Longest Palindromic Substring.md
+++ b/5. Longest Palindromic Substring.md
@@ -41,6 +41,8 @@ public class Solution {
 初始化：dp[i][i] = true (0 <= i <= n-1);  dp[i][i-1] = true (1 <= i <= n-1);  其余的初始化为false  
 dp[i][j] = (s[i] == s[j] && dp[i+1][j-1] == true)  
 
+复杂度都是O(n2)
+
 ```java
 public class Solution {
    public String longestPalindrome(String s) {
@@ -98,5 +100,5 @@ i = 0, j = 3
 i = 1, j = 4
 ```
 
-#### Manacher 算法  
+#### Manacher 算法 O(n)  
 看[这里](https://segmentfault.com/a/1190000003914228)写的很好。
