--- a/6. ZigZag Conversion.md
+++ b/6. ZigZag Conversion.md
@@ -33,18 +33,18 @@ convert("PAYPALISHIRING", 3) should return "PAHNAPLSIIGYIR".
 public class Solution {
     public String convert(String s, int numRows) {
         int len = s.length();
+        if(numRows > len || numRows == 1) return s;
+
         //zigzag的间隙
         //比如上面的例子，间隙就为2
         int gapLen = numRows - 2;
-
-        if(numRows > len || numRows == 1) return s;
-
+        //初始化为"" 
         String[] rows = new String[numRows];
         for (int i = 0; i < numRows; i++) {
             rows[i] = "";
         }
         
-        //idx为字符串的下标，i为上线的横向坐标
+        //idx为字符串的下标，i为上面的横向坐标
         for (int i = 0, idx = 0; idx < len; ) {
             //判断是否是上面的横向坐标为0，3，6的列
             if (i % (gapLen + 1) == 0) {
