--- a/6. ZigZag Conversion.md
+++ b/6. ZigZag Conversion.md
@@ -38,7 +38,7 @@ public class Solution {
         //zigzag的间隙
         //比如上面的例子，间隙就为2
         int gapLen = numRows - 2;
-        //初始化为"" 
+        //初始化为"" ，懒得用SB。。。
         String[] rows = new String[numRows];
         for (int i = 0; i < numRows; i++) {
             rows[i] = "";
@@ -71,4 +71,33 @@ public class Solution {
         return result;
     }
 }
+```
+
+#### Dicuss中的一个解法
+牛逼！好巧妙的解法，照着代码跑一遍就看懂了
+```java
+    public class Solution {
+        public String convert(String s, int numRows) {
+            if (numRows <= 1) return s;
+            StringBuilder[] sb = new StringBuilder[numRows];
+            for (int i = 0; i < sb.length; i++) {
+                sb[i] = new StringBuilder("");   //init every sb element **important step!!!!
+            }
+            int incre = 1;
+            int index = 0;
+            for (int i = 0; i < s.length(); i++) {
+                sb[index].append(s.charAt(i));
+                if (index == 0) {
+                    incre = 1;
+                }
+                if (index == numRows - 1) {
+                    incre = -1;
+                }
+                index += incre;
+            }
+            String re = "";
+            for (StringBuilder aSb : sb) re += aSb;
+            return re;
+        }
+    }
 ```
