--- a/2. Add Two Numbers.md
+++ b/2. Add Two Numbers.md
@@ -26,20 +26,24 @@ public class Solution {
 
         while (l1Ptr != null || l2Ptr != null) {
             int sum = (l1Ptr == null ? 0 : l1Ptr.val) + (l2Ptr == null ? 0 : l2Ptr.val);
+            //sum>10，要进位
             if (sum >= 10) {
                 resultPtr.val += sum - 10;
                 resultPtr.next = new ListNode(1);
             } else {
                 resultPtr.val += sum;
+                //要是l1Ptr或l2Ptr有下一个节点，那么resultPtr也要有下一个节点
                 if ((l1Ptr != null && l1Ptr.next != null) || (l2Ptr != null && l2Ptr.next != null)) {
                     resultPtr.next = new ListNode(0);
                 }
+                // >10了，要进位
                 if (resultPtr.val >= 10) {
                     resultPtr.val -= 10 ;
                     resultPtr.next = new ListNode(1);
                 }
 
             }
+            //分别指向下一节点
             resultPtr = resultPtr.next;
             l1Ptr = l1Ptr == null ? null : l1Ptr.next;
             l2Ptr = l2Ptr == null ? null : l2Ptr.next;
