--- a/144. Binary Tree Preorder Traversal.md
+++ b/144. Binary Tree Preorder Traversal.md
@@ -17,6 +17,21 @@ Note: Recursive solution is trivial, could you do it iteratively?
 
 ####解法 
 来自http://www.jiuzhang.com/solutions/binary-tree-preorder-traversal/ 
+第一种非递归解法，以`{1,2,3,4,5}`为例：  
+```
+    1
+   / \
+  2   3
+ / \   
+4   5 
+  
+              ↓ ↑  
+        ↓ ↑ ↓ 4 4 ↑
+  ↓️ ↑ ↓ 2 2 5 5 5 5 ↑
+  1 1 3 3 3 3 3 3 3 3
+    1     2     4 5 3
+```
+
 ```java
 Version 0: Non-Recursion (Recommend)
 /**
