--- a/101. Symmetric Tree.md
+++ b/101. Symmetric Tree.md
@@ -1,4 +1,5 @@
 ## 101. Symmetric Tree
+Difficulty: Easy  
 Given a binary tree, check whether it is a mirror of itself (ie, symmetric around its center).
 
 For example, this binary tree is symmetric:
@@ -19,14 +20,14 @@ Note:
 Bonus points if you could solve it both recursively and iteratively.
 
 #### 我的解法
-我一开始想到的是中序遍历，因为中序遍历有个特点，从上方投影下来就是中序遍历的结果，那么我只要检查遍历结果是不是会问的就行了。思路是对的，但是第一次提交就报错了，原因是会有下面一种状况：  
+我一开始想到的是中序遍历，因为中序遍历有个特点，从上方投影下来就是中序遍历的结果，那么我只要检查遍历结果是不是镜像的就行了。思路是对的，但是第一次提交就报错了，原因是会有下面一种状况：  
 ```
      1
     / \
    2   3
   /    /
  3    2
-这个的中序遍历也是回文的，镜像的😂
+这个的中序遍历也是镜像的😂
 ```
 解决这个问题的方法是，检测左右节点的数量是否相等。  
 问题是下面的代码没有被AC，百思不得其解。。。但我跑了些测试都是正确的。
