--- a/101. Symmetric Tree.md
+++ b/101. Symmetric Tree.md
@@ -80,7 +80,21 @@ public class Solution {
 
 #### 其他解法  
 来自：https://leetcode.com/discuss/18354/recursive-and-non-recursive-solutions-in-java  
-Recursive--400ms:
+Recursive--400ms:  
+这个解法是相当巧妙的，下面为例：  
+```
+    1
+   / \
+  2   2
+ / \ / \
+3  4 4  3
+假设isSymmetricHelp 这个方法名为 f，那么：
+      f(2,2)
+      /    \
+  f(3,3)   f(4,4)
+
+```
+
 ```java
 public boolean isSymmetric(TreeNode root) {
     return root==null || isSymmetricHelp(root.left, root.right);
