--- a/1.Two Sum.md
+++ b/1.Two Sum.md
@@ -27,3 +27,28 @@ public class Solution {
     }
 }
 ```
+
+#### 其他解法
+```java 
+/*
+     * @param numbers : An array of Integer
+     * @param target : target = numbers[index1] + numbers[index2]
+     * @return : [index1 + 1, index2 + 1] (index1 < index2)
+         numbers=[2, 7, 11, 15],  target=9
+         return [0, 1]
+     */
+    public int[] twoSum(int[] numbers, int target) {
+        HashMap<Integer,Integer> map = new HashMap<>();
+
+        for (int i = 0; i < numbers.length; i++) {
+            if (map.get(numbers[i]) != null) {
+                int[] result = {map.get(numbers[i]) , i };
+                return result;
+            }
+            map.put(target - numbers[i], i);//😎很巧妙，相减
+        }
+        
+        int[] result = {};
+        return result;
+    }
+```
