--- a/206. Reverse Linked List.md
+++ b/206. Reverse Linked List.md
@@ -9,7 +9,7 @@ A linked list can be reversed either iteratively or recursively. Could you imple
 以`[1,2,3,4]`为例：  
 ```
       1 2 3 4
-    2 1   3 4  //2.next=1, 1.next=3
+    2 1   3 4  //2.next=1, 1.next=3 //这里2相当于newHead，1相当于currHead
   3 2 1     4  //3.next=2, 1.next=4
 4 3 2 1        //4.next=3, 1.next=null,返回
 ```
