--- a/15. 3Sum.md
+++ b/15. 3Sum.md
@@ -7,10 +7,10 @@ Elements in a triplet (a,b,c) must be in non-descending order. (ie, a ≤ b ≤ 
 The solution set must not contain duplicate triplets.  
 For example, given array S = {-1 0 1 2 -1 -4},
 
-```A solution set is:
-    (-1, 0, 1)
-    (-1, -1, 2)
-```
+A solution set is:  
+   (-1, 0, 1)
+   (-1, -1, 2)
+
 
 #### 😂 -> Time Limit Exceeded 
 三层循环，实在不能容忍O(n3)了..这秘制缩进。
