--- a/141. Linked List Cycle.md
+++ b/141. Linked List Cycle.md
@@ -16,10 +16,12 @@ public boolean hasCycle(ListNode head) {
         if(head==null) return false;
         ListNode walker = head;
         ListNode runner = head;
-        while(runner.next!=null && runner.next.next!=null) {
-            walker = walker.next;
-            runner = runner.next.next;
-            if(walker==runner) return true;
+        while(walker != null && runner != null) {
+             walker = walker.next;
+            runner = runner.next;
+            if (runner != null)
+                runner = runner.next;
+            if (walker == runner) return true;
         }
         return false;
 }
