--- a/142. Linked List Cycle II.md
+++ b/142. Linked List Cycle II.md
@@ -64,3 +64,50 @@ public class Solution {
     }
 }
 ```
+
+#### AC 解法
+来自：http://fisherlei.blogspot.jp/2013/11/leetcode-linked-list-cycle-ii-solution.html  
+首先，比较直观的是，先使用Linked List Cycle I的办法，判断是否有cycle。如果有，则从头遍历节点，对于每一个节点，查询是否在环里面，是个O(n^2)的法子。但是仔细想一想，发现这是个数学题。
+
+如下图，假设linked list有环，环长Y，环以外的长度是X。
+
+![](http://lh6.ggpht.com/-b2c4DQdI4ts/UpEoB_514LI/AAAAAAAAHtQ/--hO5jrtYsE/image_thumb%25255B1%25255D.png?imgmax=800)
+
+现在有两个指针，第一个指针，每走一次走一步，第二个指针每走一次走两步，如果他们走了t次之后相遇在K点
+
+那么  
+```     
+指针一  走的路是      t = X + nY + K        ①
+
+ 指针二  走的路是     2t = X + mY+ K       ②          m,n为未知数
+
+把等式一代入到等式二中, 有
+
+2X + 2nY + 2K = X + mY + K
+
+=>   X+K  =  (m-2n)Y    ③
+```
+
+这就清晰了，X和K的关系是基于Y互补的。等于说，两个指针相遇以后，再往下走X步就回到Cycle的起点了。这就可以有O(n)的实现了。
+```java
+public ListNode detectCycle(ListNode head) {
+        if (head == null) return null;
+        ListNode walker = head;
+        ListNode runner = head;
+        while (walker != null && runner != null) {
+            walker = walker.next;
+            runner = runner.next;
+            if (runner != null)
+                runner = runner.next;
+            if (walker == runner) break;
+        }
+        if (runner == null) return null; //这个主要是为了避免0->null, 或者0->-1->2->3->null，的情况
+        walker = head;
+        while (walker != runner) {
+            walker = walker.next;
+            runner = runner.next;
+        }
+        return runner;
+        
+}
+```
