--- a/141. Linked List Cycle.md
+++ b/141. Linked List Cycle.md
@@ -7,10 +7,10 @@ Can you solve it without using extra space?
 
 #### O(1) Space Solution
 来自https://leetcode.com/discuss/32906/o-1-space-solution  
-1.Use two pointers, walker and runner.
-2.walker moves step by step. runner moves two steps at time.
-3.if the Linked List has a cycle walker and runner will meet at some point.  
-简单来说就是两个指针，一个每次走一步，一个每次走两步，如果有欢的话，迟早他们两个会相遇的，这和平时操场跑圈一样嘛，跑的快的迟早超过跑得慢的。  
+1.Use two pointers, walker and runner.  
+2.walker moves step by step. runner moves two steps at time.  
+3.if the Linked List has a cycle walker and runner will meet at some point.    
+简单来说就是两个指针，一个每次走一步，一个每次走两步，如果有环的话，迟早他们两个会相遇的，这和平时操场跑圈一样嘛，跑的快的迟早超过跑得慢的。  
 ```java
 public boolean hasCycle(ListNode head) {
         if(head==null) return false;
