--- a/153. Find Minimum in Rotated Sorted Array.md
+++ b/153. Find Minimum in Rotated Sorted Array.md
@@ -39,6 +39,13 @@ The minimum element must satisfy one of two conditions: 1) If rotate, A[min] < A
 
 ```java
  public int findMin(int[] nums) {
+
+       if (nums == null || nums.length == 0) {
+           return 0;
+       }
+       if (nums.length == 1) {
+           return nums[0];
+       }
        int left = 0;
        int right = nums.length - 1;
 
