--- a/160. Intersection of Two Linked Lists.md
+++ b/160. Intersection of Two Linked Lists.md
@@ -53,7 +53,7 @@ public class Solution {
 ```
 #### AC解法
 来自：https://leetcode.com/discuss/17177/concise-java-solution-o-1-memory-o-n-time  
-我忍为这道题有歧义吧，到底什么事第一个公共节点呢  
+我认为这道题有歧义吧，到底什么是第一个公共节点呢  
 1, Get the length of the two lists.  
 
 2, Align them to the same start point.  
