--- a/19. Remove Nth Node From End of List.md
+++ b/19. Remove Nth Node From End of List.md
@@ -41,7 +41,7 @@ public class Solution {
         ListNode slow = dummy;
         int temp = n;
         for (; fast.next != null; temp--) {
-            if (temp <= 0) { //control，当temo<=0的时候slow也开始移动
+            if (temp <= 0) { //control，当temp<=0的时候slow也开始移动
                 slow = slow.next;
             }
             fast = fast.next;
