--- a/105.Construct Binary Tree from Preorder and Inorder Traversal.md
+++ b/105.Construct Binary Tree from Preorder and Inorder Traversal.md
@@ -1,4 +1,4 @@
-105. Construct Binary Tree from Preorder and Inorder Traversal
+## 105. Construct Binary Tree from Preorder and Inorder Traversal
 Difficulty: Medium    
 Given preorder and inorder traversal of a tree, construct the binary tree.
 
