--- a/168. Excel Sheet Column Title.md
+++ b/168. Excel Sheet Column Title.md
@@ -1,7 +1,9 @@
 ## 168. Excel Sheet Column Title
 Difficulty: Easy  
 Given a positive integer, return its corresponding column title as appear in an Excel sheet.  
-这道题是我微软onsite时遇到的一道题，没做过遇到这道题确实有点难一下子理得很清楚（我当时这道题应该做的不好，从most significant digit做，而且忘了n要-1）。这道题说白了其实就是十进制转换26进制，而且是从1开始的1十进制的转换
+
+
+。这道题说白了其实就是十进制转换26进制，而且是从1开始的1十进制的转换
 
 本质是进制转换，将n转化为26进制，转化过程如下（括号里的是26进制数）：
 
