--- a/168. Excel Sheet Column Title.md
+++ b/168. Excel Sheet Column Title.md
@@ -29,7 +29,7 @@ public class Solution {
         String res = "";
         while (n > 0) {
             res = (char)((n - 1) % 26 + 'A') + res;
-            n = (n - 1) / 26;
+            n = (n - 1) / 26; //相当于减去上一行的余数
         }
         return res;
     }
